<resources>

    <string name="app_name">AxRex</string>
    <string name="create_incident_request">Create Incident Request</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_start">Incident Request Status</string>
    <string name="title_input_description_activity">Input Incident Description</string>
    <string name="title_select_media_activity">Select Images</string>
    <string name="title_select_type_activity">Select Incident Type</string>
    <string name="title_specify_victims_activity">Specify Victims</string>
    <string name="title_submit_request_activity">Submit Incident Request</string>
    <string name="title_main_map_activity">Map Incident</string>
    <string name="title_verify_location_activity">Verify Location</string>
    <string name="law">Law</string>
    <string name="fire">Fire</string>
	<string name="done">Submit Request Now</string>
	<string name="ok">OK</string>
	<string name="victims">Victims</string>
	<string name="no_victims">No Victims</string>
	<string name="attach_image">Attach Image</string>
	<string name="next">Next</string>
</resources>